option('log', type: 'string', value: '')
option('nolog', type: 'string', value: '')
option('log_handler', type: 'string', value: 'dprintf')

option('engine', type: 'combo', choices: ['prop65'], value: 'prop65')
option('kernel', type: 'combo', choices: ['ish', 'linux'], value: 'ish')
option('kconfig', type: 'array', value: [])

option('vdso_c_args', type: 'string', value: '')

option('no_crlf', type: 'boolean', value: false)
